crates/math-core/src/snapshots/math_core__lexer__tests__missing_brace.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\begin x + y"
---
Error: Unknown environment "x".
   ╭─[ <input>:1:8 ]
   │
 1 │ \begin x + y
   │        ┬  
   │        ╰── unknown environment
───╯
